--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -21,12 +21,7 @@
     width: 44%;
     background-color: var(--ion-color-step-950);
 }
-.buy-nft-btn{
-    /* border:  1px solid var(--ion-color-step-950); */
-    /* border-radius: 5px; */
-    /* color: var(--ion-text-color); */
-    text-transform: none;
-}
+
 .login-right-side-wrapper{
     background-color: #e9e9e9;
     
@@ -36,3 +31,54 @@
 }
 
 
+.buy-nft-btn {
+    position: relative;
+    text-transform: uppercase;
+    }
+
+.buy-nft-btn:before {
+    content: '';
+    background: linear-gradient(45deg, #2e3a7f, #6590e0, #6bc0d7, #76e3ce, #6fddab, #6bc0d7, #6590e0, #2e3a7f);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    /* background-size: 400%; */
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.buy-nft-btn:active {
+    color: #000
+}
+
+.buy-nft-btn:active:after {
+    background: transparent;
+}
+
+.buy-nft-btn:hover:before {
+    opacity: 1;
+}
+
+.buy-nft-btn:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
